syntax = "proto3";

option go_package = "genproto/users_service";

package users_service;

service TeacherService{
    rpc Create(CreateTeacher) returns (Teacher){}
    rpc GetById(TeacherPrimaryKey) returns (Teacher){}
    rpc GetList(GetListTeacherRequest) returns (GetListTeacherResponse){}
    rpc Update(UpdateTeacher) returns (Teacher){}
    rpc Delete(TeacherPrimaryKey) returns (Empty){}
}

message Empty{}

message TeacherPrimaryKey{
    string id = 1;
}

message Teacher{
    string id = 1;
    string full_name = 2;
    string phone = 3;
    string salary = 4;
    string password = 5;
    string login = 6;
    string branch_id = 7;
    string role_id = 8;
    string months_worked = 9;
    string total_sum = 10;
    string ielts_score = 11;
    string created_at = 12;
    string updated_at = 13;
}

message CreateTeacher {
    string full_name = 1;
    string phone = 2;
    string salary = 3;
    string password = 4;
    string login = 5;
    string branch_id = 6;
    string role_id = 7;
    string months_worked = 8;
    string total_sum = 9;
    string ielts_score = 10;
}
message UpdateTeacher {
    string id = 1;
    string full_name = 2;
    string phone = 3;
    string salary = 4;
    string password = 5;
    string login = 6;
    string branch_id = 7;
    string role_id = 8;
    string months_worked = 9;
    string total_sum = 10;
    string ielts_score = 11;
}

message GetListTeacherRequest{
    int64 offset = 1;
    int64 limit = 2;
    string search = 3;
}


message GetListTeacherResponse{
    int64 count = 1;
    repeated Teacher teachers = 2;
}